--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -25,9 +25,6 @@
                             <ul class="dropdown-menu sidebar-dropdown-menu search-dropdown-menu" role="menu">
                                 <input class="form-control" id="myInput" type="text" placeholder="Search.." width="150px">
                                 <div id="conducts-list" class="search-dropdown-menu-results">
-                                    {% for conduct in conducts %}
-                                        <li><a target="content-frame" href="/conductEditor/?conductID={{ conduct["_id"] }}">{{ conduct["name"] }}</a></li>
-                                    {% endfor %}
                                 </div>
                             </ul>
                         </div>
@@ -52,10 +49,7 @@
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu sidebar-dropdown-menu" role="menu">
-                                <div class="search-dropdown-menu-results">
-                                    {% for pluginPage in pluginPages %}
-                                        <li><a target="content-frame" href="/plugin/{{ pluginPage }}">{{ pluginPage }}</a></li>
-                                    {% endfor %}
+                                <div id="plugins-list" class="search-dropdown-menu-results">
                                 </div>
                             </ul>
                         </div>
@@ -129,6 +123,39 @@
                 }
             }
         });
+        $.ajax({url:"/conducts/", type:"GET", success: function ( result ) {
+                $("#conducts-list").empty()
+                for ( conduct in result["result"] ) {
+                    listItem = $("<li>")
+                    address = $("<a target='content-frame'>")
+                    address.attr({"href":"/conductEditor/?conductID="+result["result"][conduct]["_id"]})
+                    address.text(result["result"][conduct]["name"])
+                    listItem.append(address)
+                    $("#conducts-list").append(listItem)
+                }
+                var value = $("#myInput").val().toLowerCase();
+                $(".search-dropdown-menu li").filter(function() {
+                    $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+                });
+            }
+        });
+        $.ajax({url:"/plugins/", type:"GET", success: function ( result ) {
+                $("#plugins-list").empty()
+                for ( plugin in result["result"] ) {
+                    listItem = $("<li>")
+                    address = $("<a target='content-frame'>")
+                    address.attr({"href":"/plugin/"+result["result"][plugin]})
+                    address.text(result["result"][plugin])
+                    listItem.append(address)
+                    $("#plugins-list").append(listItem)
+                }
+            }
+        });
     }
-    setInterval(function(){ authPoll(); }, 10000)
+    setInterval(function(){ authPoll(); }, 5000)
+
+    $(document).ready(function(){
+        authPoll()
+    });
+        
 </script>
