--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -116,14 +116,14 @@
 
 <script>
     function authPoll(){
-        $.ajax({url:"/api/1.0/auth/poll/", type:"GET", success: function ( result ) {
+        $.ajax({url:"/api/1.0/auth/poll/", type:"GET", timeout: 3500, success: function ( result ) {
                 var r = result["data"]
                 if (r != true) {
                     location.reload();
                 }
             }
         });
-        $.ajax({url:"/conducts/", type:"GET", success: function ( result ) {
+        $.ajax({url:"/conducts/", type:"GET", timeout: 3500, success: function ( result ) {
                 $("#conducts-list").empty()
                 for ( conduct in result["result"] ) {
                     listItem = $("<li>")
@@ -139,7 +139,7 @@
                 });
             }
         });
-        $.ajax({url:"/plugins/", type:"GET", success: function ( result ) {
+        $.ajax({url:"/plugins/", type:"GET", timeout: 3500, success: function ( result ) {
                 $("#plugins-list").empty()
                 for ( plugin in result["result"] ) {
                     listItem = $("<li>")
@@ -151,8 +151,8 @@
                 }
             }
         });
+        setTimeout(function(){ authPoll(); }, 5000)
     }
-    setInterval(function(){ authPoll(); }, 5000)
 
     $(document).ready(function(){
         authPoll()
