--- a/web/templates/modelEditorList.html
+++ b/web/templates/modelEditorList.html
@@ -197,9 +197,9 @@
         $.ajax({url:"/api/1.0/models/"+modelName+"/"+id+"/", type:"GET", success: function ( result ) {
                 for ( resultItem in result["results"][0] ) {
                     if (typeof result["results"][0][resultItem] == "object") {
-                        table.row.add({ "property" : resultItem, "value" : [ resultItem, JSON.stringify(result["results"][0][resultItem]) ] });
+                        table.row.add({ "property" : resultItem, "value" : [ resultItem, JSON.stringify(result["results"][0][resultItem]) ], "initalValue" : JSON.stringify(result["results"][0][resultItem]) });
                     } else {
-                        table.row.add({ "property" : resultItem, "value" : [ resultItem, result["results"][0][resultItem] ] });
+                        table.row.add({ "property" : resultItem, "value" : [ resultItem, result["results"][0][resultItem] ], "initalValue" : String(result["results"][0][resultItem]) });
                     }
                 }
                 table.draw();
@@ -214,7 +214,10 @@
                     var jsonData = {}
                     table.rows().every( function ( rowIdx, tableLoop, rowLoop ) {
                         var data = this.data();
-                        jsonData[data["value"][0]] = $("#property_"+data["value"][0]).val()
+                        if (data["initalValue"] != $("#property_"+data["value"][0]).val())
+                        {
+                            jsonData[data["value"][0]] = $("#property_"+data["value"][0]).val()
+                        }
                     } );
                     $.ajax({url:"/api/1.0/models/"+modelName+"/"+id+"/", type:"POST", data: JSON.stringify({ action : "update", data: jsonData, CSRF: CSRF }), contentType:"application/json", success: function ( result ) {
                             alertNow("Object saved!");
