Added UI Cache Clearing for Admins

--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -39,6 +39,7 @@
                                     <div class="search-dropdown-menu-results">
                                         <li><a target="content-frame" href="/model/">Object Editor</a></li>
                                         <li><a target="content-frame" href="/admin/backups/">Backups</a></li>
+                                        <li><a target="content-frame" href="/clearCache/">Clear Cache (ALL)</a></li>
                                     </div>
                                 </ul>
                             </div>
