--- a/web/templates/conductEditor.html
+++ b/web/templates/conductEditor.html
@@ -39,6 +39,8 @@
 	<body>
 		<div class="ui-container">
 			<button onclick="createNewObjectPanel()" class="btn btn-primary newModelObject theme-panelButton">+</button>
+			<button onclick="exportConduct()" class="btn btn-primary exportConductButton theme-panelButton">Export</button>
+			<button onclick="importConduct()" class="btn btn-primary importConductButton theme-panelButton">Import</button>
 			<div class="ui-main">
 				<!-- Right Click Menu -->
 				<ul id="contextMenu" class="dropdown-menu" role="menu" style="display:none" >
