Changed trigger to test function

--- a/web/static/css/objectProperties.css
+++ b/web/static/css/objectProperties.css
@@ -44,6 +44,10 @@
 	width: 100%;
 }
 
+.inputExpand {
+	height: 80%;
+}
+
 .existingPropertiesPanel-SearchResults {
 	display: flex;
 	flex-wrap: wrap;
