Updated test text

--- a/web/templates/conductEditor.html
+++ b/web/templates/conductEditor.html
@@ -50,7 +50,7 @@
 					<li class="divider"></li>
 					<li><a tabindex="-1" onclick="duplicateFlowObject()">Duplicate</a></li>
 					<li class="divider"></li>
-					<li><a tabindex="-1" onclick="triggerFlowObject()">Test</a></li>
+					<li><a tabindex="-1" onclick="triggerFlowObject()">Test Trigger</a></li>
 					<li class="divider"></li>
 					<li><a tabindex="-1" onclick="editFlowACL()">Modify UI ACL</a></li>
 					<li class="divider"></li>
