--- a/web/templates/conductEditor.html
+++ b/web/templates/conductEditor.html
@@ -49,6 +49,7 @@
 					<li><a tabindex="-1" onclick="copyFlowObject()">Copy</a></li>
 					<li class="divider"></li>
 					<li><a tabindex="-1" onclick="duplicateFlowObject()">Duplicate</a></li>
+					<li><a tabindex="-1" onclick="exportFlowObject()">Export</a></li>
 					<li class="divider"></li>
 					<li><a tabindex="-1" onclick="triggerFlowObject()">Test Trigger</a></li>
 					<li class="divider"></li>
