Updated panel UI

--- a/web/static/themes/default/default.css
+++ b/web/static/themes/default/default.css
@@ -29,6 +29,12 @@
 
 .theme-panelHeader {
     background-color: #222222;
+    color: #8a8a8a;
+}
+
+.theme-panelHeader-Active {
+    background-color: #333333;
+    color: #cacaca;
 }
 
 .theme-panelBody {
