Updated codify text

--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -28,7 +28,7 @@
                                 </div>
                             </ul>
                         </div>
-                        <a class="btn btn-primary btn-block theme-navButton" role="button" onclick="navigate('Codify','/codify/')">Codify (BETA)</a>
+                        <a class="btn btn-primary btn-block theme-navButton" role="button" onclick="navigate('Codify','/codify/')">Codify</a>
                         {% if admin %}
                             <div class="btn-group btn-block sidebar_item">
                                 <button type="button" class="btn btn-primary btn-block dropdown-toggle theme-navButton" data-toggle="dropdown">
