Added tab swtich hotkey

--- a/web/templates/audit.html
+++ b/web/templates/audit.html
@@ -13,6 +13,9 @@
 
 <script src="{{ url_for('static', filename='javascript/helpers.js') }}"></script>
 
+
+<script src="{{ url_for('static', filename='javascript/hotkeys.js') }}"></script>
+
 <link rel="stylesheet" href="{{ url_for('static', filename='css/datatable.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='themes/default/default.css') }}">
 
