--- a/web/templates/conductEditor.html
+++ b/web/templates/conductEditor.html
@@ -28,6 +28,8 @@
 		<script src="{{ url_for('static', filename='javascript/triggerObject.js') }}"></script>
 		<script src="{{ url_for('static', filename='javascript/aclProperties.js') }}"></script>
 
+		<script src="{{ url_for('static', filename='javascript/hotkeys.js') }}"></script>
+
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/conductEditor.css') }}">
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/objectProperties.css') }}">
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/alert.css') }}">
