--- a/web/templates/debug.html
+++ b/web/templates/debug.html
@@ -9,6 +9,8 @@
 <script src="{{ url_for('static', filename='includes/visjs/js/moment.js') }}"></script>
 <script src="{{ url_for('static', filename='includes/datatables/js/datetime.moment.js') }}"></script>
 
+<script src="{{ url_for('static', filename='javascript/hotkeys.js') }}"></script>
+
 <link rel="stylesheet" href="{{ url_for('static', filename='css/datatable.css') }}">
 
 <html>
