--- a/web/templates/import.html
+++ b/web/templates/import.html
@@ -19,6 +19,8 @@
 		<script src="{{ url_for('static', filename='javascript/helpers.js') }}"></script>
 		<script src="{{ url_for('static', filename='javascript/alert.js') }}"></script>
 
+		<script src="{{ url_for('static', filename='javascript/hotkeys.js') }}"></script>
+
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/alert.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/codify.css') }}">
     
