--- a/web/templates/backups.html
+++ b/web/templates/backups.html
@@ -7,6 +7,8 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='includes/bootstrap-3.3.7/css/bootstrap.min.css') }}">
 <script src="{{ url_for('static', filename='includes/bootstrap-3.3.7/js/bootstrap.min.js') }}"></script>
 
+<script src="{{ url_for('static', filename='javascript/hotkeys.js') }}"></script>
+
 <link rel="stylesheet" href="{{ url_for('static', filename='css/datatable.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='themes/default/default.css') }}">
 
