--- a/web/templates/blank.html
+++ b/web/templates/blank.html
@@ -1,8 +1,10 @@
 <html>
     <head>
         <link rel="stylesheet" href="{{ url_for('static', filename='themes/default/default.css') }}">
+        <script src="{{ url_for('static', filename='javascript/hotkeys.js') }}"></script>
     </head>
     <body class="theme-panelContainer">
         <pre class="theme-panelContainer">{{ content }}</pre>
     </body>
 </html>
+
