--- a/web/templates/codify.html
+++ b/web/templates/codify.html
@@ -17,7 +17,9 @@
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/datatable.css') }}">
 
 		<script src="{{ url_for('static', filename='javascript/helpers.js') }}"></script>
-		<script src="{{ url_for('static', filename='javascript/alert.js') }}"></script>
+    <script src="{{ url_for('static', filename='javascript/alert.js') }}"></script>
+    
+    <script src="{{ url_for('static', filename='javascript/hotkeys.js') }}"></script>
 
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/alert.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/codify.css') }}">
