--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -96,6 +96,9 @@
 </html>
 
 <script>
+    var currentTab = null
+    var lastTab = null
+
     function generateUUID() {
         var d = new Date().getTime();
         var uuid = 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function(c) {
@@ -110,10 +113,20 @@
         var id = generateUUID();
 		$('ul#tabs li:last-child').before('<li id="li' + id + '"><a href="#tab' + id + '" role="tab" data-toggle="tab">' + name + ' <button type="button" class="btn theme-navButton" onclick="removeTab(\'' + id + '\');">X</button></a>');
         $('div.tab-content div:last-child').after('<div class="tab-pane" id="tab' + id + '"><iframe name="content-frame" class="content-frame" focus() src="'+ url +'"></iframe></div>');
+        $('ul#tabs > li').click(function() { 
+            if (currentTab != null) {
+                lastTab = currentTab;
+            }
+            currentTab = id
+        });
         $('ul#tabs > li').removeClass("active");
         $('div.tab-content div').removeClass("active");
         $('ul#tabs > li#li' + id).addClass("active");
         $('div.tab-content div#tab' + id).addClass("active");
+        if (currentTab != null) {
+            lastTab = currentTab;
+        }
+        currentTab = id
     }
     
 
@@ -121,6 +134,19 @@
         $('ul#tabs > li#li' + liElem).remove();
         $('div.tab-content div#tab' + liElem).remove();
     }
+
+    function swtichTab() {
+        if ( currentTab != null ) {
+            $('ul#tabs > li').removeClass("active");
+            $('div.tab-content div').removeClass("active");
+            $('ul#tabs > li#li' + lastTab).addClass("active");
+            $('div.tab-content div#tab' + lastTab).addClass("active");
+            changeTab = currentTab;
+            currentTab = lastTab;
+            lastTab = changeTab;
+        }
+    }
+
 </script>
 
 <script>
@@ -194,4 +220,17 @@
         authPoll()
     });
         
+</script>
+
+<script>
+    $(document).ready(function () {
+        $(window).bind("keydown", function (event) { 
+            if (event.ctrlKey || event.metaKey) {
+                console.log(event.keyCode)
+                if (event.keyCode == 223) {
+                    swtichTab();
+                }
+            }
+        })
+    });
 </script>
