--- a/web/templates/modelEditorList.html
+++ b/web/templates/modelEditorList.html
@@ -13,6 +13,8 @@
 
 <script src="{{ url_for('static', filename='javascript/helpers.js') }}"></script>
 
+<script src="{{ url_for('static', filename='javascript/hotkeys.js') }}"></script>
+
 
 <link rel="stylesheet" href="{{ url_for('static', filename='css/datatable.css') }}">
 
@@ -280,3 +282,4 @@
         locationHandler();
     });
 </script>
+
