--- a/web/templates/conductEditor.html
+++ b/web/templates/conductEditor.html
@@ -16,6 +16,9 @@
 
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/datatable.css') }}">
 
+		<script src="{{ url_for('static', filename='includes/select2/select2.min.js') }}"></script>
+		<link rel="stylesheet" href="{{ url_for('static', filename='includes/select2/select2.min.css') }}">
+
 		<script src="{{ url_for('static', filename='includes/visjs/js/vis-network.min.js') }}"></script>
 
 		<script src="{{ url_for('static', filename='javascript/helpers.js') }}"></script>
