--- a/web/templates/myAccount.html
+++ b/web/templates/myAccount.html
@@ -126,10 +126,11 @@
     $('#viewOTP').on('click', function(e){
         e.preventDefault();
 		$.ajax({url:"/api/1.0/auth/viewOTP/", type:"GET", contentType:"application/json", success: function ( result ) {
-                var qr = qrcode(4, "L"); 
+                var qr = qrcode(4, "M"); 
                 qr.addData(result);
                 qr.make();
                 document.getElementById("qrcode").innerHTML = qr.createImgTag();
+                console.log(result);
 			},
 			error: function ( result ) {
 				var panel = $("#loginForm");
