Added cleanup web interface for admins #43

--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -39,6 +39,7 @@
                                     <div class="search-dropdown-menu-results">
                                         <li><a onclick="navigate('Object Editor','/model/')">Object Editor</a></li>
                                         <li><a onclick="navigate('Backups','/admin/backups/')">Backups</a></li>
+                                        <li><a onclick="navigate('Cleanup - Objects','/cleanup/')">Cleanup - Objects</a></li>
                                         <li><a onclick="navigate('Clear Cache (ALL)','/clearCache/')">Clear Cache (ALL)</a></li>
                                     </div>
                                 </ul>
