Updated context menu

--- a/web/templates/conductEditor.html
+++ b/web/templates/conductEditor.html
@@ -48,15 +48,27 @@
 			<button onclick="exportConduct()" class="btn btn-primary exportConductButton theme-panelButton">Export</button>
 			<button onclick="importConduct()" class="btn btn-primary importConductButton theme-panelButton">Import</button>
 			<div class="ui-main">
-				<!-- Right Click Menu -->
-				<ul id="contextMenu" class="dropdown-menu" role="menu" style="display:none" >
+				<!-- Right Click Menus -->
+				<ul id="contextMenu" class="dropdown-menu contextMenuTrigger" role="menu" style="display:none" >
 					<li><a tabindex="-1" onclick="editFlowObject()">Edit</a></li>
-					<li><a tabindex="-1" onclick="copyFlowObject()">Copy</a></li>
 					<li class="divider"></li>
+					<li><a tabindex="-1" onclick="copyFlowObject()">Mirror Object</a></li>
 					<li><a tabindex="-1" onclick="duplicateFlowObject()">Duplicate</a></li>
+					<li class="divider"></li>
 					<li><a tabindex="-1" onclick="exportFlowObject()">Export</a></li>
+					<li><a tabindex="-1" onclick="CodifyFlowObject()">Codify</a></li>
 					<li class="divider"></li>
 					<li><a tabindex="-1" onclick="triggerFlowObject()">Test Trigger</a></li>
+					<li class="divider"></li>
+					<li><a tabindex="-1" onclick="editACL()">Security Settings</a></li>
+					<li class="divider"></li>
+					<li><a tabindex="-1" onclick="deleteFlowObject()">Delete</a></li>
+				</ul>
+				<ul id="contextMenu" class="dropdown-menu contextMenuAction" role="menu" style="display:none" >
+					<li><a tabindex="-1" onclick="editFlowObject()">Edit</a></li>
+					<li class="divider"></li>
+					<li><a tabindex="-1" onclick="copyFlowObject()">Mirror Object</a></li>
+					<li><a tabindex="-1" onclick="duplicateFlowObject()">Duplicate</a></li>
 					<li class="divider"></li>
 					<li><a tabindex="-1" onclick="editACL()">Security Settings</a></li>
 					<li class="divider"></li>
@@ -77,55 +89,15 @@
 	(function ($, window) {
 		$.fn.contextMenu = function (settings) {
 			return this.each(function () {
-				// Open context menu
 				$(this).on("contextmenu", function (e) {
-					// return native menu if pressing control
-					if (e.ctrlKey) return;
-					
-					//open menu
-					if (selectedObject)
-					{
-						var $menu = $(settings.menuSelector)
-							.data("invokedOn", $(e.target))
-							.show()
-							.css({
-								position: "absolute",
-								left: getMenuPosition(e.clientX, 'width', 'scrollLeft'),
-								top: getMenuPosition(e.clientY, 'height', 'scrollTop')
-							})
-							.off('click')
-							.on('click', 'a', function (e) {
-								$menu.hide();
-						
-								var $invokedOn = $menu.data("invokedOn");
-								var $selectedMenu = $(e.target);
-								
-								//settings.menuSelected.call(this, $invokedOn, $selectedMenu);
-							});
-					}
-					
-					return false;
+					return false
 				});
-
 				//make sure menu closes on any click
 				$('body').click(function () {
-					$(settings.menuSelector).hide();
+					$(".contextMenuTrigger").hide();
+					$(".contextMenuAction").hide();
 				});
 			});
-			
-			function getMenuPosition(mouse, direction, scrollDir) {
-				var win = $(window)[direction](),
-					scroll = $(window)[scrollDir](),
-					menu = $(settings.menuSelector)[direction](),
-					position = mouse + scroll;
-							
-				// opening menu would pass the side of the page
-				if (mouse + menu > win && menu < mouse) 
-					position -= menu;
-				
-				return position;
-			}    
-
 	};
 	})(jQuery, window);
 	$(".flowchart").contextMenu({menuSelector: "#contextMenu" });
