--- a/web/templates/conductEditor.html
+++ b/web/templates/conductEditor.html
@@ -49,29 +49,29 @@
 			<button onclick="importConduct()" class="btn btn-primary importConductButton theme-panelButton">Import</button>
 			<div class="ui-main">
 				<!-- Right Click Menus -->
-				<ul id="contextMenu" class="dropdown-menu contextMenuTrigger" role="menu" style="display:none" >
+				<ul id="contextMenu" class="dropdown-menu contextMenuTrigger theme-dropdown-menu" role="menu" style="display:none" >
 					<li><a tabindex="-1" onclick="editFlowObject()">Edit</a></li>
-					<li class="divider"></li>
+					<li class="divider theme-dropdown-menu-divider"></li>
 					<li><a tabindex="-1" onclick="copyFlowObject()">Mirror Object</a></li>
 					<li><a tabindex="-1" onclick="duplicateFlowObject()">Duplicate</a></li>
-					<li class="divider"></li>
+					<li class="divider theme-dropdown-menu-divider"></li>
 					<li><a tabindex="-1" onclick="exportFlowObject()">Export</a></li>
 					<li><a tabindex="-1" onclick="CodifyFlowObject()">Codify</a></li>
-					<li class="divider"></li>
+					<li class="divider theme-dropdown-menu-divider"></li>
 					<li><a tabindex="-1" onclick="triggerFlowObject()">Test Trigger</a></li>
-					<li class="divider"></li>
+					<li class="divider theme-dropdown-menu-divider"></li>
 					<li><a tabindex="-1" onclick="editACL()">Security Settings</a></li>
-					<li class="divider"></li>
+					<li class="divider theme-dropdown-menu-divider"></li>
 					<li><a tabindex="-1" onclick="deleteFlowObject()">Delete</a></li>
 				</ul>
-				<ul id="contextMenu" class="dropdown-menu contextMenuAction" role="menu" style="display:none" >
+				<ul id="contextMenu" class="dropdown-menu contextMenuAction theme-dropdown-menu" role="menu" style="display:none" >
 					<li><a tabindex="-1" onclick="editFlowObject()">Edit</a></li>
-					<li class="divider"></li>
+					<li class="divider theme-dropdown-menu-divider"></li>
 					<li><a tabindex="-1" onclick="copyFlowObject()">Mirror Object</a></li>
 					<li><a tabindex="-1" onclick="duplicateFlowObject()">Duplicate</a></li>
-					<li class="divider"></li>
+					<li class="divider theme-dropdown-menu-divider"></li>
 					<li><a tabindex="-1" onclick="editACL()">Security Settings</a></li>
-					<li class="divider"></li>
+					<li class="divider theme-dropdown-menu-divider"></li>
 					<li><a tabindex="-1" onclick="deleteFlowObject()">Delete</a></li>
 				</ul>
 				<div class="flowchart theme-content" id="flowchart"></div>
